--- a/buzzle/src/sass/intro.scss
+++ b/buzzle/src/sass/intro.scss
@@ -2,8 +2,12 @@
   text-align: left;
   position: relative;
   width: 90%;
+  margin: 0;
+  padding: 0;
 }
-
+html,
+body {
+}
 .barriers {
   position: absolute;
   width: 100%;
@@ -18,7 +22,7 @@
   padding: 0;
   display: block;
 
-  color: black;
+  color: rgb(16, 16, 16);
 
   @media only screen and (max-width: 600px) {
     left: 0.63em;
@@ -41,7 +45,7 @@
 
   display: block;
 
-  color: black;
+  color: rgb(16, 16, 16);
 
   @media only screen and (max-width: 600px) {
     left: 0.63em;
@@ -62,7 +66,7 @@
   padding: 0;
   text-align: center;
   left: 3em;
-  color: #000000;
+  color: rgb(16, 16, 16);
   @media only screen and (max-width: 600px) {
     top: 20em;
   }
@@ -229,4 +233,14 @@
   top: 39em;
   left: 45%;
   color: black;
+}
+.black {
+  background-color: red;
+  width: 100%;
+  min-height: 200vh;
+  margin-top: 11em;
+  padding: 0;
+  @media only screen and (min-width: 1450px) {
+    margin-top: 22em;
+  }
 }
