--- a/buzzle/src/sass/waitlist.scss
+++ b/buzzle/src/sass/waitlist.scss
@@ -7,16 +7,22 @@ $secondary: #a28bf3;
 $white: #fff;
 $gray: white;
 .cancel {
-  padding: 2%;
-  margin: 5%;
+  padding: 1%;
   font-family: Work Sans;
   font-weight: 600;
+  margin-top: 2%;
+  border: none;
+  color: white;
+  background: none;
 }
 .send {
-  padding: 2%;
+  padding: 1%;
   margin-top: 5%;
   font-family: Work Sans;
   font-weight: 600;
+  border: none;
+  color: white;
+  background: none;
 }
 
 .bg-contact3 {
