--- a/buzzle/src/sass/intro.scss
+++ b/buzzle/src/sass/intro.scss
@@ -1,94 +1,51 @@
-.home {
-  text-align: left;
-  position: relative;
-  width: 90%;
-  margin: 0;
-  padding: 0;
-}
+// .home {
+//   text-align: left;
+//   position: relative;
+//   width: 90%;
+//   margin: 0;
+//   padding: 0;
+// }
 html,
 body {
 }
 .barriers {
-  position: absolute;
   width: 100%;
   height: auto;
-  top: 2.5em;
-  left: 1em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-family: Montserrat;
-  font-weight: normal;
+  font-weight: 900;
   font-size: 6vw;
-  //line-height: 1.1em;
-  margin: 0;
-  padding: 0;
-  display: block;
-
+  position: fixed;
+  text-align: center;
   color: rgb(16, 16, 16);
-
   @media only screen and (max-width: 600px) {
-    left: 0.63em;
-    font-size: 6vw;
-    top: 3em;
-    margin: 0;
-    padding: 0;
+    font-size: 8.5vw;
   }
 }
-.barriers2 {
-  position: absolute;
-  width: 100%;
-  height: auto;
-  top: 3.9em;
-  left: 1.5em;
-  font-family: Montserrat;
-  font-weight: normal;
-  font-size: 6vw;
-  //line-height: 1.1em;
 
-  display: block;
-
-  color: rgb(16, 16, 16);
-
-  @media only screen and (max-width: 600px) {
-    left: 0.63em;
-    font-size: 6vw;
-    top: 5em;
-  }
-}
 .buzzle {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: auto;
-  font-size: 2vw;
-  top: 16.5em;
-  text-align: center;
+  font-size: 1.7vw;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -75%);
   font-family: Work Sans;
   font-style: normal;
   margin: 0;
   padding: 0;
   text-align: center;
-  left: 3em;
   color: rgb(16, 16, 16);
-  @media only screen and (max-width: 600px) {
-    top: 20em;
-  }
-}
-.buzzle2 {
-  position: absolute;
-  width: 100%;
-  height: auto;
-  font-size: 2vw;
-  top: 17.8em;
-  text-align: center;
-  font-family: Work Sans;
-  font-style: normal;
-  left: 3em;
-  text-align: center;
-
-  color: #000000;
 
   @media only screen and (max-width: 600px) {
-    top: 22em;
+    top: 63%;
+    font-size: 2.3vw;
   }
 }
+
 .path {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
