--- a/buzzle/src/sass/product.scss
+++ b/buzzle/src/sass/product.scss
@@ -1,15 +1,15 @@
 .editing {
-  height: auto;
   position: absolute;
-  font-family: IBM Plex Sans "sans serif";
-  font-weight: 700;
+  font-family: Montserrat;
+  font-weight: 900;
 
-  font-size: 3vw;
+  font-size: 1.5vw;
+  font-style: normal;
   //line-height: 1.1em;
-
-  margin-top: 10%;
-  left: 5em;
-  color: rgb(242, 242, 247);
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -15%);
+  color: white;
 }
 .desc {
   height: auto;
@@ -83,4 +83,21 @@
   margin-top: 50%;
   left: 6em;
   color: rgb(242, 242, 247);
+}
+.subtitle {
+  font-family: Work Sans;
+  color: white;
+  font-size: 1.3vw;
+}
+.title {
+  font-family: Montserrat;
+  font-weight: 900;
+  color: white;
+  font-size: 2vw;
+}
+.pics {
+  @media only screen and (max-width: 600px) {
+    width: 50%;
+    height: 50%;
+  }
 }
