--- a/buzzle/src/sass/product.scss
+++ b/buzzle/src/sass/product.scss
@@ -1,15 +1,15 @@
 .editing {
-  position: absolute;
+  //position: absolute;
   font-family: Montserrat;
-  font-weight: 900;
+  font-weight: 600;
 
-  font-size: 1.5vw;
+  font-size: 1.2em;
   font-style: normal;
-  //line-height: 1.1em;
-  top: 15%;
-  left: 50%;
-  transform: translate(-50%, -15%);
-  color: white;
+  line-height: 1.5em;
+  padding-bottom: 6em;
+
+  //transform: translate(-50%, -15%);
+  color: rgb(29, 29, 29);
 }
 .desc {
   height: auto;
@@ -58,7 +58,7 @@
 
   margin-top: 35%;
   left: 3em;
-  color: rgb(242, 242, 247);
+  color: rgb(46, 46, 46);
 }
 .masking {
   height: auto;
@@ -70,7 +70,7 @@
 
   margin-top: 40%;
   left: 23em;
-  color: rgb(242, 242, 247);
+  color: rgb(34, 34, 34);
 }
 .path {
   height: auto;
@@ -82,20 +82,22 @@
 
   margin-top: 50%;
   left: 6em;
-  color: rgb(242, 242, 247);
+  color: rgb(39, 39, 39);
 }
 .subtitle {
   font-family: Work Sans;
-  color: white;
-  font-size: 1.3vw;
+  color: rgb(31, 30, 30);
+  font-size: 1.1em;
 }
 .title {
   font-family: Montserrat;
   font-weight: 900;
-  color: white;
-  font-size: 2vw;
+  color: rgb(44, 43, 43);
+  font-size: 1.5em;
 }
 .pics {
+  width: 50%;
+  height: 50%;
   @media only screen and (max-width: 600px) {
     width: 50%;
     height: 50%;
