--- a/buzzle/src/sass/waitlist.scss
+++ b/buzzle/src/sass/waitlist.scss
@@ -64,13 +64,15 @@ $gray: white;
 }
 .text {
   z-index: 1;
-  text-align: center;
-  align-items: center;
-  position: fixed;
-  top: 90%;
-  left: 50%;
-  transform: translate(-50%, -90%);
-  width: 80%;
+  // text-align: center;
+  // align-items: center;
+  position: absolute;
+  // top: 90%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 0;
+  // transform: translate(-50%, -90%);
+  //width: 80%;
   border: 0px;
 
   .paragraph {
@@ -80,7 +82,7 @@ $gray: white;
     font-family: Baloo 2;
     font-weight: 600;
     text-align: center;
-    font-size: 22px;
+    font-size: 0.5em;
   }
 
   .btn {
@@ -106,9 +108,9 @@ $gray: white;
     }
   }
   [data-wipe] {
-    display: inline-block;
+    //display: inline-block;
     background-color: black;
-    position: absolute;
+    //position: absolute;
     padding: 12px 18px;
     text-decoration: none;
     position: relative;
@@ -119,8 +121,11 @@ $gray: white;
     text-align: left;
     color: white;
     overflow: hidden;
-    font-size: 1vw;
+    font-size: 0.8em;
 
+    @media only screen and (max-width: 600px) {
+      font-size: 0.3em;
+    }
     &:before,
     &:after {
       content: attr(data-wipe);
